fix start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "start": "nodemon --inspect src/index.js"
+        "dev": "nodemon --inspect src/index.js",
+        "start": "node src/index.js"
     },
     "author": "Thái Thành Nam",
     "license": "ISC",
